--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
     <script src="https://kit.fontawesome.com/578b68b184.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css" rel="stylesheet">
+    <link href="css/animate.css" rel="stylesheet">
     <link href="css/main-layout.css" rel="stylesheet" type="text/css">
     <link href="css/slideshow.css" rel="stylesheet" type="text/css">
     <script>
@@ -52,8 +52,8 @@
           <ul class="navigation">
             <li class="nav-item selected"><a href=""><i class="fas fa-home fa-fw"></i> Home</a></li>
             <li class="nav-item"><a href="#"><i class="fas fa-comments"></i> Leave a message</a></li>
-            <li class="nav-item"><a href="pages/categories.html"><i class="fas fa-tags fa-fw"></i> Categories</a></li>
-            <li class="nav-item"><a href="pages/archive.html"><i class="fas fa-archive fa-fw"></i> Archive</a></li>
+            <li class="nav-item"><a href="categories/"><i class="fas fa-tags fa-fw"></i> Categories</a></li>
+            <li class="nav-item"><a href="archive/"><i class="fas fa-archive fa-fw"></i> Archive</a></li>
             <li class="nav-item"><a href="#"><i class="fas fa-coffee fa-fw"></i> Donate</a></li>
           </ul>
     </ul>
@@ -61,16 +61,6 @@
     <div class="site-wrap">
       <div class="content">
         <div class="slides">
-          <!--
-            Okay so, to make this as dynamic as possible i have made it so you can specify the animations
-            for each slide easiy. It goes as follows:
-
-            id="the entering animation"
-            name="the leaving animation"
-
-            no id = defaulting to fadeInUpBig
-            no name = default to fadeOutUpBig
-         -->
           <div class="slide s1">
             <h1>Welcome.</h1> <!-- You can fill these with whatever html you'd like. -->
             <p>Your intro here.</p>
