Changing up the color scheme
changed some colors
added some placeholder text
personal links now change color when you're hovering

--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+TODO list
+
+-make personal links change color on hover
+-make page backgrounds look better
+-add some Lorem ipsum
+-make the archive
+
+-->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
@@ -40,6 +49,7 @@
               <img src="imgs/test-img.png" alt="Test Image" class="flip"/>
             </div>
             <div class="info">
+              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <ul class="personal-links">
                 <li><a href="#"><i class="far fa-envelope"></i></a></li>
                 <li><a href="#"><i class="fab fa-github-square"></i></a></li>
