--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ TODO list
 -make page backgrounds look better
 -add some Lorem ipsum
 -make the archive
-
+-make a button
 -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
@@ -21,7 +21,9 @@ TODO list
       }
     </style>
     <script src="https://kit.fontawesome.com/578b68b184.js" crossorigin="anonymous"></script>
+    <script src="js/jquery-3.5.0.min.js"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.css"/>
     <link href="css/animate.css" rel="stylesheet">
     <link href="css/main-layout.css" rel="stylesheet" type="text/css">
     <link href="css/slideshow.css" rel="stylesheet" type="text/css">
@@ -42,14 +44,14 @@ TODO list
     <button class="back" id="back" onclick="changePage(-1)"><i class="fas fa-angle-left" id="back" ></i></button>
     <button class="next" id="next" onclick="changePage(1)"><i class="fas fa-angle-right" id="next" ></i></button>
   </div>
-    <ul class="sidebar">
+    <ul class="sidebar" onmouseover="updateMouse(false)" onmouseout="updateMouse(true)">
         <li class="sidebar-item">
           <div class="personal-wrapper">
             <div class="photo-container">
               <img src="imgs/test-img.png" alt="Test Image" class="flip"/>
             </div>
             <div class="info">
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p class="text" data-simplebar data-simplebar-auto-hide="false" data-simplebar-scrollbar-Min-Size="90">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <ul class="personal-links">
                 <li><a href="#"><i class="far fa-envelope"></i></a></li>
                 <li><a href="#"><i class="fab fa-github-square"></i></a></li>
@@ -93,6 +95,7 @@ TODO list
         <div class="progress" id="progress"></div>
       </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
+    <script src="js/hide-slides.js"></script>
   </body>
-  <script src="js/hide-slides.js"></script>
 </html>
