Additions and fixes
Added a way to configure personal info easily.

Fixed a glitch with changing slides

modified some css

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@ TODO list
       var current = 1; //set the slide to start at
     </script>
     <script src="js/slides.js"></script>
+    <script src="js/populate-info.js"></script>
   </head>
   <body>
 
@@ -51,12 +52,6 @@ TODO list
               <img src="imgs/test-img.png" alt="Test Image" class="flip"/>
             </div>
             <div class="info">
-              <p class="text" data-simplebar data-simplebar-auto-hide="false" data-simplebar-scrollbar-Min-Size="90">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <ul class="personal-links">
-                <li><a href="#"><i class="far fa-envelope"></i></a></li>
-                <li><a href="#"><i class="fab fa-github-square"></i></a></li>
-                <li><a href="#"><i class="fab fa-linkedin"></i></a></li>
-              </ul>
             </div>
           </div>
         </li>
@@ -95,6 +90,7 @@ TODO list
         <div class="progress" id="progress"></div>
       </div>
     </div>
+    <script>populateInfo("settings.xml");</script>
     <script src="https://cdn.jsdelivr.net/npm/simplebar@latest/dist/simplebar.min.js"></script>
     <script src="js/hide-slides.js"></script>
   </body>
